# algoAnalysis

./: CMakeLists.txt  README.md
analysis/: SortingData.xlsx  findings.docx  runner.csv
sorts/: AlgorithmStrategy.cpp  AlgorithmStrategy.h  cycleSort.cpp  cycleSort.h  heapSort.cpp  heapSort.h  insertionSort.cpp  insertionSort.h  mergeSort.cpp  mergeSort.h  quickSort.cpp  quickSort.h  selectionSort.cpp  selectionSort.h
src/: AlgoRunner.cpp  AlgoRunner.h  main.cpp
testing/: catch.hpp
